Correct some spacings for mobile

--- a/webpack/stylesheets/index.scss
+++ b/webpack/stylesheets/index.scss
@@ -25,7 +25,7 @@
   z-index: 1;
 
   @media (max-width: $mobile-width) {
-    padding: 55px 10px 5px;
+    padding: 45px 10px 5px 65px;
   }
 
   @media(min-width:1601px) {
